cmake_minimum_required(VERSION 2.6)
project(VtkConformalFlatteningMesh)
set(VTK_DIR "PATH/TO/VTK/BUILD/DIRECTORY")
find_package(VTK REQUIRED)
find_package(VXL REQUIRED)
include(${VTK_USE_FILE})
include(${VXL_CMAKE_DIR}/UseVXL.cmake)
add_executable(VtkConformalFlatteningMesh vtkConformalFlatteningMeshFilter.cpp test.cpp) 
target_link_libraries(VtkConformalFlatteningMesh ${VTK_LIBRARIES})
target_link_libraries(VtkConformalFlatteningMesh ${VXL_LIBRARIES} vnl)
